--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,35 +1,37 @@
 <%= turbo_frame_tag @post do %>
-  <% if @delete_rights %>
-    <%= link_to 'Delete post', post_path(@post), method: :delete, data: { turbo_method: :delete, turbo_confirm: 'Are you sure you want to delete this post?' } %>
-  <% end %>
-  <%= @post.user.email %>
-  <%= @post.body %>
-  <%# like button %>
-  <div id="like-button">
-    <% if @like %>
-      <%= button_to 'Unlike', like_path(@like, post_id: @post.id), method: :delete, data: { turbo_method: :delete } %>
-    <% else %>
-      <%= button_to 'Like', post_likes_path(@post), data: { turbo_method: 'post' } %>
+  <div class="post">
+    <% if @delete_rights %>
+      <%= link_to 'Delete post', post_path(@post), method: :delete, data: { turbo_method: :delete, turbo_confirm: 'Are you sure you want to delete this post?' } %>
     <% end %>
-    <div id="like-count"><%= @post.liking_users.size if @post.liking_users.size > 0 %></div>
-  </div>
-  <%# comments %>
-  <div id="new-comment">
-    <%= current_user.email %>
-    <%= form_with model: [@post, @post.comments.build] do |f| %>
-      <%= f.text_area :body, placeholder: 'Your comment here...' %>
-      <%= f.submit %>
-    <% end %>
-  </div>
-  <div id='comments'>
-    <% @post.comments.all.order(created_at: :desc).each do |comment| %>
-      <div id="comment">
-        <%= comment.user.email %>
-        <%= comment.body %>
-        <% if comment.user == current_user %>
-          <%= link_to 'Delete', comment_path(comment, post_id: @post.id), method: :delete, data: { turbo_method: :delete } %>
-        <% end %>
-      </div>
-    <% end %>
+    <%= @post.user.email %>
+    <%= @post.body %>
+    <%# like button %>
+    <div class="like-button">
+      <% if @like %>
+        <%= button_to 'Unlike', like_path(@like, post_id: @post.id), method: :delete, data: { turbo_method: :delete } %>
+      <% else %>
+        <%= button_to 'Like', post_likes_path(@post), data: { turbo_method: 'post' } %>
+      <% end %>
+      <div class="like-count"><%= @post.liking_users.size if @post.liking_users.size > 0 %></div>
+    </div>
+    <%# comments %>
+    <div class="new-comment">
+      <%= current_user.email %>
+      <%= form_with model: [@post, @post.comments.build] do |f| %>
+        <%= f.text_area :body, placeholder: 'Your comment here...' %>
+        <%= f.submit %>
+      <% end %>
+    </div>
+    <div class='comments'>
+      <% @post.comments.all.order(created_at: :desc).each do |comment| %>
+        <div class="comment">
+          <%= comment.user.email %>
+          <%= comment.body %>
+          <% if comment.user == current_user %>
+            <%= link_to 'Delete', comment_path(comment, post_id: @post.id), method: :delete, data: { turbo_method: :delete } %>
+          <% end %>
+        </div>
+      <% end %>
+    </div>
   </div>
 <% end %>
