refactor route constraint, refactor posts#show

--- a/app/views/posts/_all_posts_of_user.html.erb
+++ b/app/views/posts/_all_posts_of_user.html.erb
@@ -1,3 +1,5 @@
+<%# for users#show view %>
+
 <div id="user-posts">
   <% @user_posts.each do |post| %>
     <%= turbo_frame_tag post, src: post_path(post), loading: 'lazy' do %>
