move likes button to a partial and use turbo streams in likes#create,#destroy

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,10 @@
  *= require_tree .
  *= require_self
  */
+.post {
+  border: 1px solid black;
+}
+
+.new-comment {
+  background-color: blanchedalmond;
+}
