--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,14 +10,7 @@
 
 
     <%# like button %>
-    <div class="like-button">
-      <% if @like %>
-        <%= button_to 'Unlike', like_path(@like, post_id: @post.id), method: :delete, data: { turbo_method: :delete } %>
-      <% else %>
-        <%= button_to 'Like', post_likes_path(@post), data: { turbo_method: 'post' } %>
-      <% end %>
-      <div class="like-count"><%= @post.liking_users.size if @post.liking_users.size > 0 %></div>
-    </div>
+    <%= render partial: 'likes/likes', locals: { post: @post, like: @like } %>
 
 
     <%# comments %>
