improve friend requests methods, routes, views & controller actions

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,16 +19,7 @@
             <%= link_to 'Log out', destroy_user_session_path, method: :delete, data: { turbo_method: :delete } %>
         </div>
         <div id="notifications">
-          <ul>
-            <% current_user.received_friend_requests.pending.includes(:sender).order(created_at: :desc).each do |request| %>
-              <li>
-                <div><%= request.sender.email%>  wants to be your friend!</div>
-                <%= form_with model: request do |f| %>
-                  <%= f.submit 'Accept' %>
-                <% end %>
-              </li>
-            <% end %>
-          </ul>
+          <%= render 'layouts/notifications' %>
         </div>
       </div>
     <% end %>
