--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,7 +5,7 @@
       <%= link_to 'Delete post', post_path(@post), method: :delete, data: { turbo_method: :delete, turbo_confirm: 'Are you sure you want to delete this post?' } %>
     <% end %>
     
-    <%= @post.user.email %>
+    <%= link_to @user.email, user_path(@user), data: { turbo_frame: "_top" } %>
     <%= @post.body %>
 
 
